--- a/ESP32-basic/platformio.ini
+++ b/ESP32-basic/platformio.ini
@@ -15,6 +15,7 @@ framework = arduino
 lib_deps = 
 	adafruit/Adafruit MPU6050@^2.2.6
 	t-vk/ESP32 BLE Keyboard@^0.3.2
+	adafruit/Adafruit SSD1306@^2.5.15
 upload_port = /dev/ttyUSB0
 monitor_port = /dev/ttyUSB0
 monitor_speed = 115200
