--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,5 @@
-contourpy==1.3.3
-cycler==0.12.1
-fonttools==4.59.0
-kiwisolver==1.4.8
 matplotlib==3.10.3
 numpy==2.3.2
-packaging==25.0
-pillow==11.3.0
-pyparsing==3.2.3
 pyserial==3.5
-pysub==0.2
-python-dateutil==2.9.0.post0
 pyusb==1.3.1
-six==1.17.0
+keyboard==0.13.5
